# wafflemaker

./: .dockerenv.example  .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  docker-compose.yml  example-service.toml  insomnia-workspace.json  wafflemaker.example.toml
.github/: auto_assign.yml
.github/workflows/: audit.yml  rust.yml  sentry.yml
docker/: Dockerfile  vault.hcl
docker/scripts/: vault.py  wafflemaker.hcl
openapi/: deployments.yaml  management.yaml
scripts/: add-database.sh  remove-database.sh
src/: args.rs  config.rs  main.rs
src/deployer/: error.rs  mod.rs  noop.rs
src/deployer/docker/: events.rs  mod.rs
src/dns/: error.rs  mod.rs  records.rs  service.rs
src/git/: diff.rs  mod.rs  pull.rs  service.rs
src/http/: errors.rs  handlers.rs  mod.rs
src/http/webhooks/: docker.rs  validators.rs
src/jobs/: mod.rs  plan_update.rs  update_service.rs
src/management/: deployments.rs  leases.rs  mod.rs  services.rs
src/notifier/: error.rs  events.rs  mod.rs
src/notifier/services/: discord.rs  github.rs
src/processor/: mod.rs  worker.rs
src/processor/jobs/: delete_service.rs  mod.rs  plan_update.rs  update_service.rs
src/service/: dependency.rs  mod.rs  name.rs  registry.rs  secret.rs
src/vault/: error.rs  mod.rs  models.rs  renewal.rs
src/webhooks/: docker.rs  github.rs  handlers.rs  mod.rs  validators.rs
src/webhooks/models/: github.rs  mod.rs
wafflectl/: Cargo.toml
wafflectl/src/: args.rs  http.rs  main.rs
wafflectl/src/commands/: add.rs  delete.rs  get.rs  mod.rs  run.rs
wafflemaker/: Cargo.toml
wafflemaker-service/: Cargo.toml
wafflemaker-service/src/: dependency.rs  lib.rs  parts.rs  secret.rs
wafflemaker-service/testdata/: minimal.toml
wafflemaker-storage/: .gitignore  Cargo.toml
wafflemaker-storage/migrations/: 20221109175908_deployments.sql  20221110181330_services.sql
wafflemaker-storage/src/: deployment.rs  error.rs  lib.rs  service.rs
wafflemaker/src/: config.rs  main.rs
wafflemaker/src/deployer/: error.rs  events.rs  mod.rs  options.rs  service.rs
wafflemaker/src/deployer/docker/: mod.rs
wafflemaker/src/dns/: mod.rs  records.rs  service.rs
wafflemaker/src/git/: diff.rs  head.rs
wafflemaker/src/http/: error.rs  errors.rs  logging.rs  mod.rs
wafflemaker/src/http/management/: deployments.rs  leases.rs  mod.rs  services.rs
wafflemaker/src/http/webhooks/: error.rs  handlers.rs  mod.rs  validators.rs
wafflemaker/src/management/: deployments.rs  mod.rs  services.rs
wafflemaker/src/notifier/: error.rs  mod.rs
wafflemaker/src/notifier/services/: discord.rs  mod.rs
wafflemaker/src/processor/: mod.rs  worker.rs
wafflemaker/src/processor/jobs/: delete_service.rs  mod.rs  plan_update.rs  update_service.rs
wafflemaker/src/service/: dependencies.rs  dependency.rs  mod.rs  registry.rs
wafflemaker/src/vault/: error.rs  mod.rs  models.rs
wafflemaker/src/webhooks/: handlers.rs  mod.rs  validators.rs
wafflemaker/src/webhooks/models/: mod.rs
wafflemaker/testdata/service/: dependencies.toml  dependency_dynamic.toml  dependency_simple.toml  missing_dependencies.toml
wafflemaker/testdata/webhooks/: docker.json
