[package]
name = "wafflemaker"
description = "WaffleHack's application deployment service"
version = "0.1.0"
authors = ["Alex Krantz <alex@krantz.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Configuration
globset = "0.4"
structopt = "0.3"
toml = "0.5"

# Deployment
git2 = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["v4"] }

# Utilities
deadqueue = { version = "0.2.0", default-features = false, features = ["unlimited"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.9"
tokio = { version = "1.6", features = ["fs", "macros", "process", "rt", "rt-multi-thread", "signal"] }

# Webhooks
base64 = "0.13"
bytes = "1.0"
hex = "0.4"
ring = { version = "0.16", default-features = false, features = ["std"] }
serde_json = "1.0"
warp = { version = "0.3", default-features = false }
