[package]
name = "wafflectl"
description = "A CLI utility for wafflemaker"
version = "0.1.1"
authors = ["Alex Krantz <alex@krantz.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
eyre = "0.6"
color-eyre = { version = "0.5", default-features = false }
structopt = "0.3"

# HTTP
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.2"
