[package]
name = "wafflectl"
description = "A CLI utility for wafflemaker"
version = "0.2.1"
authors = ["Alex Krantz <alex@krantz.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
color-eyre = { version = "0.5", default-features = false }
eyre = "0.6"
structopt = "0.3"
tabled = "0.2"

# HTTP
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
url = "2.2"

# Logging
sentry = { version = "0.23.0", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "transport"] }
