[package]
name = "wafflemaker-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
serde = { version = "1.0.145", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["json", "macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "time"] }
time = { version = "0.3.17", features = ["serde"] }
