[package]
name = "wafflemaker"
description = "WaffleHack's application deployment service"
version = "0.3.3"
authors = ["Alex Krantz <alex@krantz.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Configuration
globset = "0.4"
structopt = "0.3"
toml = "0.5"

# Deployment
bollard = { version = "0.11", features = ["ssl"] }
git2 = "0.13"
sled = { version = "0.34", features = ["compression"] }

# DNS
redis = { version = "0.21.5", default-features = false, features = ["acl", "aio", "connection-manager", "tokio-comp"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
console-subscriber = { version = "0.1.6", features = ["parking_lot"] }
sentry = { version = "0.27.0", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt", "std", "tracing-log"] }
uuid = { version = "0.8", features = ["v4"] }

# Job processing
async-trait = "0.1"
deadqueue = { version = "0.2.0", default-features = false, features = ["unlimited"] }

# Secrets
jsonwebtoken = "7.2"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
url = "2.2"

# Utilities
async-recursion = "0.3"
futures = "0.3"
itertools = '0.10'
once_cell = "1.8"
parking_lot = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.9"
shrinkwraprs = "0.3"
tokio = { version = "1.19.2", features = ["fs", "macros", "process", "rt", "rt-multi-thread", "signal", "time", "tracing"] }
tokio-stream = { version = "0.1", features = ["fs"] }

# Webhooks
axum = { version = "0.5.9", default-features = false, features = ["headers", "http1", "http2", "json", "matched-path", "tower-log"] }
base64 = "0.13"
bytes = "1.0"
hex = "0.4"
ring = { version = "0.16", default-features = false, features = ["std"] }
serde_json = "1.0"
warp = { version = "0.3", default-features = false }
